<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameListNews"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageThumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:riv_corner_radius="10dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/imageThumbnail"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTimeAgo"
                style="@style/Theme.NewsApplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_hours_ago_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvNameSource"
                style="@style/Theme.NewsApplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/person_name_cnn_indonesia_text"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitleNews"
                    style="@style/Theme.NewsApplication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/title_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDateTime"
                style="@style/Theme.NewsApplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/date_text"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>